# greenbug

./: CMakeLists.txt  LICENSE  README.md
Kernel/: CMakeLists.txt  Kernel.cmake  init.cpp  linker.ld
Kernel/Boot/i386/: Boot.S  CMakeLists.txt  Multiboot2.h  boot.S  i386.cmake
Libraries/LibC/: CMakeLists.txt  LibC.cmake  stdint.h
Libraries/LibC/bits/: types.h
